# experiment

./: .gitignore  LICENSE.txt  README.md  minimal_system_config copy.toml  minimal_system_config.toml  pyproject.toml  setup.py
experiment/: __init__.py  __main__.py  blockmanager.py  clock.py  components.py  manager.py  run.py  runtime.py  taskmanager.py  time_management.py  trial.py
experiment/camera/: base.py
experiment/components/: __init__.py  components.py  from_config.py  messages.py
experiment/components/datastore/: __init__.py  base.py  jsonstore.py
experiment/components/events/: __init__.py  base.py  event.py  pygame.py
experiment/components/identifier/: __init__.py  base.py
experiment/components/io/: GPIO.py  __init__.py  base.py  (+1 more)
experiment/datastore/: base.py  jsonstore.py
experiment/engine/: launch.py  pygame.py
experiment/events/: base.py  bus.py  event.py  hotkeys.py  pygame.py  types.py
experiment/experiments/: scene.py
experiment/io/: GPIO.py  base.py  from_config.py  ismatec.py  nidaq.py
experiment/logger/: base.py
experiment/remote/: base.py  flask.py
experiment/renderers/: base.py  pygame.py
experiment/rendering/: base.py  primitives.py
experiment/scene/: adapters.py  bbox.py  node.py
experiment/task/: scene.py  trial.py
experiment/util/: bbox.py  colours.py  config.py  python_import_helper.py
scripts/: demo_pygame_renderer.py  dmts_demo_scene.py
tests/: test_component_initialization.py  test_nidaq.py  test_pygame_render.py  test_pygame_renderer.py  test_task.py
tests/test_task/: task_config.toml  trial.py
(+43 files in other folders)
